package sis.studentinfo;

public enum Grade {
    A, B, C, D, F
}
