package sis.studentinfo;

public interface GradingStrategy {
    int getGradePointsFor(Grade grade);
}
